[package]
name        = "dirs-ext"
version     = "1.0.0"
authors     = ["Simon Ochsenreither <simon@ochsenreither.de>", "Raffael Zica <raffael@pixeltastic.de>"]
description = "A tiny low-level library that provides platform-specific standard locations of directories for config, cache and other data on Linux, Windows and macOS by leveraging the mechanisms defined by the XDG base/user directory specifications on Linux, the Known Folder API on Windows, and the Standard Directory guidelines on macOS."
readme      = "README.md"
license     = "MIT OR Apache-2.0"
repository  = "https://github.com/SirJson/dirs-ext-rs"
maintenance = { status = "passively-developed" }
keywords    = ["xdg", "basedir", "app_dirs", "path", "folder"]

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "redox")'.dependencies]
redox_users = "0.2.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["knownfolders", "objbase", "shlobj", "winbase", "winerror"] }
